--- a/libs/ui/src/lib/ui.module.scss
+++ b/libs/ui/src/lib/ui.module.scss
@@ -1,3 +1,6 @@
 .title {
-  background-color: red;
+    background-color: #143055;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
 }
